# hs-money

./: .gitignore  .watcher-config  LICENSE  app.config  hs-money.cabal  readme.md
app/: Main.hs
src/Persist/: Config.hs  Database.hs  FDB.hs  FileDB.hs  Initializor.hs  Persist.hs  Persistable.hs  Serializable.hs
src/Transaction/: Parser.hs  Transaction.hs
src/Transactions/: Account.hs  Money.hs  Parser.hs  Transaction.hs
test/: Spec.hs
test/Transaction/: Tests.hs
test/Transactions/: Tests.hs
